# hmc5883l

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs
src/address/: mod.rs  registers.rs
src/config/: data_output_rate.rs  gain_config.rs  measurement_mode.rs  measurement_sample_output.rs  mod.rs  mode_register.rs  mode_register_config.rs  operating_mode_register.rs  register_a.rs  register_b.rs
src/errors/: hmc5883lerror.rs  hmc8553lerror.rs  mod.rs
src/hmc5883l/: compass_point.rs  gain.rs  hmc5883l.rs  mod.rs  mode.rs
