[package]
name = "hmc5883l"
version = "0.1.0"
edition = "2021"

[lib] 
name = "hmc5883l"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0.0"
libm = "0.2"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[[bin]]
name = "hmc5883_demo"
path = "src/examples/hmc5883_demo.rs"
