[package]
name = "hmc5883l"
version = "0.2.0"
edition = "2024"

[lib] 
name = "hmc5883l"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0.0"
libm = "0.2.16"

[dev-dependencies]
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embassy
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    "defmt",
] }

# Defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-usb = { version = "0.5.1", features = ["defmt"] }
heapless = "0.9.2"
static_cell = "2.1.1"